Kelsey Development Sandbox/src/objects/Reporting_Period__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Quarter_End_Date__c</fullName>
        <label>Quarter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Number__c</fullName>
        <label>Quarter Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Start_Date__c</fullName>
        <label>Quarter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Reporting Period</label>
</CustomObject>